# LightEffectDriver

./: LightEffectDriver.cpp  LightEffectDriver.h  README.md
core/: CMakeLists.txt  Core.cc  Core.hh  Curve.cc  Curve.hh  Direction.hh  Effect.hh  Order.hh
examples/FullDemo/: FullDemo.ino
examples/SimpleFading/: SimpleFading.ino
simulation/: CMakeLists.txt  Light.cc  Light.hh  Simulation.cc  Simulation.hh  main.cc
